# gargantua

./: .gitignore  Cargo.toml  README.md  lint.sh  package-lock.json  package.json  tsconfig.json
.github/workflows/: CI.yml  ci.yml  lint.yml  rust-lint.yml  rust-test.yml
GraphQL/: accounts.graphql  products.graphql  reviews.graphql  router.graphql
blueprint/: Cargo.toml
blueprint/src/: blueprint.rs  build.rs  error.rs  index.rs  lib.rs  parse.rs
blueprint/src/snapshots/: blueprint__build__tests__parse.snap  blueprint__index__test__from_blueprint.snap
examples/: router.graphql
gaw/: package-lock.json  package.json  test.wac.ts
query_plan/: Cargo.toml  cargo.toml
query_plan/src/: build.rs  builder.rs  error.rs  lib.rs  model.rs  plan.rs  transformer.rs
query_plan/src/snapshots/: query_plan__build__test__test.snap  query_plan__model__test__test.snap
valid/: Cargo.toml  cargo.toml
valid/src/: error.rs  lib.rs  valid.rs
wac/: ci.wac.ts  cli.ts  workflow.ts
workflows/: ci.wac.ts  lint.wac.ts  test.wac.ts
workspace/blueprint/src/: blueprint.rs  build.rs  index.rs
workspace/blueprint/src/snapshots/: blueprint__build__tests__parse.snap
workspace/node/src/: lib.rs
workspace/query_plan/: Cargo.toml
workspace/query_plan/src/: algorithm.rs  lib.rs  model.rs
workspace/query_plan/src/model/: v0.rs  v1.rs
workspace/query_plan/src/snapshots/: query_plan__model__test__complex.snap  query_plan__model__test__test.snap
workspace/query_plan/src/transform/: enrich.rs  minify.rs  mod.rs  preset.rs  pruner.rs
workspace/query_plan_alt/: Cargo.toml
workspace/query_plan_alt/src/: error.rs  model.rs
workspace/resolver/: Cargo.toml
workspace/resolver/src/: lib.rs
workspace/valid/src/: cause.rs  transform.rs  valid.rs
(+10 files in other folders)
