[workspace]
resolver = "2"
members = ["blueprint", "valid", "query_plan"]

[workspace.dependencies]
wasm-bindgen = "0.2"
derive_setters = "0.1.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
pretty_assertions = { version = "1.4.1" }
resource = "0.5.0"
insta = "1.40.0"
derive_more = { version = "1.0.0", features = ["full"] }
