[package]
name = "blueprint"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql-parser = "7.0.9"
async-graphql-value = "7.0.9"
url = { version = "2.5.2", features = ["serde"] }
derive_setters.workspace = true
serde.features = ["derive"]
serde.workspace = true
serde_json.workspace = true
valid = { path = "../valid" }

[dev-dependencies]
resource.workspace = true
insta.workspace = true
